<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 naipingzai <npznnz@gmail.com>
  ~ All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Common group -->
    <group android:id="@+id/group_common">
        <item
            android:id="@+id/action_open_with"
            android:title="@string/file_item_action_open_with" />
        <item
            android:id="@+id/action_cut"
            android:title="@string/cut" />
        <item
            android:id="@+id/action_copy"
            android:title="@string/copy" />
        <item
            android:id="@+id/action_delete"
            android:title="@string/delete" />
        <item
            android:id="@+id/action_rename"
            android:title="@string/rename" />
        <item
            android:id="@+id/action_extract"
            android:title="@string/file_item_action_extract" />
        <item
            android:id="@+id/action_archive"
            android:title="@string/file_item_action_archive" />
        <item
            android:id="@+id/action_share"
            android:title="@string/share" />
    </group>
    <!-- Extended group -->
    <group android:id="@+id/group_extended">
        <item
            android:id="@+id/action_media_tools"
            android:title="@string/file_item_action_media_tools" />
        <item
            android:id="@+id/action_open_hex"
            android:title="@string/file_item_action_open_hex" />
        <item
            android:id="@+id/action_encrypt"
            android:title="@string/file_item_action_encrypt" />
        <item
            android:id="@+id/action_decrypt"
            android:title="@string/file_item_action_decrypt" />
        <item
            android:id="@+id/action_copy_path"
            android:title="@string/file_item_action_copy_path" />
        <item
            android:id="@+id/action_add_bookmark"
            android:title="@string/file_item_action_add_bookmark" />
        <item
            android:id="@+id/action_properties"
            android:title="@string/file_item_action_properties" />
    </group>
</menu>
