<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 naipingzai <npznnz@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_view_sort"
        android:icon="@drawable/sort_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_view_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_view"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_list"
                    android:title="@string/file_list_action_view_list" />
                <item
                    android:id="@+id/action_view_grid"
                    android:title="@string/file_list_action_view_grid" />
            </group>
            <group
                android:id="@+id/group_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/file_list_action_sort_by_name" />
                <item
                    android:id="@+id/action_sort_by_type"
                    android:title="@string/file_list_action_sort_by_type" />
                <item
                    android:id="@+id/action_sort_by_last_modified"
                    android:title="@string/file_list_action_sort_by_last_modified" />
                <item
                    android:id="@+id/action_sort_directories_first"
                    android:checkable="true"
                    android:title="@string/file_list_action_sort_directories_first" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_new_task"
        android:orderInCategory="100"
        android:title="@string/file_list_action_new_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:alphabeticShortcut="r"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden_files"
        android:alphabeticShortcut="h"
        android:orderInCategory="100"
        android:title="@string/file_list_action_show_hidden_files"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_file_tools"
        android:orderInCategory="100"
        android:title="@string/file_list_action_file_tools"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_media_tools"
        android:orderInCategory="100"
        android:title="@string/file_list_action_media_tools"
        app:showAsAction="never" />
</menu>
