<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 advancefilemanager
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/check_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/trash_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restore_selected"
        android:orderInCategory="200"
        android:title="@string/trash_restore_selected"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:orderInCategory="300"
        android:title="@string/trash_delete_selected"
        app:showAsAction="never" />

</menu>
