<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 naipingzai <npznnz@gmail.com>
  ~ All Rights Reserved.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_title_divider_padding">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollIndicators="top|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingEnd="?dialogPreferredPadding"
            android:paddingTop="8dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <naipingzai.materialfile.ui.ReadOnlyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_properties_permission_owner">

                <naipingzai.materialfile.ui.ReadOnlyTextInputEditText
                    android:id="@+id/ownerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <naipingzai.materialfile.ui.DropDownView
                    android:id="@+id/ownerDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </naipingzai.materialfile.ui.ReadOnlyTextInputLayout>

            <naipingzai.materialfile.ui.ReadOnlyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/file_properties_permission_group">

                <naipingzai.materialfile.ui.ReadOnlyTextInputEditText
                    android:id="@+id/groupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <naipingzai.materialfile.ui.DropDownView
                    android:id="@+id/groupDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </naipingzai.materialfile.ui.ReadOnlyTextInputLayout>

            <naipingzai.materialfile.ui.ReadOnlyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/file_properties_permission_set_mode_others">

                <naipingzai.materialfile.ui.ReadOnlyTextInputEditText
                    android:id="@+id/othersText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <naipingzai.materialfile.ui.DropDownView
                    android:id="@+id/othersDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </naipingzai.materialfile.ui.ReadOnlyTextInputLayout>

            <naipingzai.materialfile.ui.ReadOnlyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/file_properties_permission_set_mode_special">

                <naipingzai.materialfile.ui.ReadOnlyTextInputEditText
                    android:id="@+id/specialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <naipingzai.materialfile.ui.DropDownView
                    android:id="@+id/specialDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />
            </naipingzai.materialfile.ui.ReadOnlyTextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/recursiveCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="8dp"
                android:paddingStart="@dimen/dialog_padding_minus_7dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/file_properties_permission_recursive"
                android:textAppearance="?textAppearanceListItem" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/uppercaseXCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:paddingStart="@dimen/dialog_padding_minus_7dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/file_properties_permission_set_mode_uppercase_x"
                android:textAppearance="?textAppearanceListItem" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
