<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 advancefilemanager
  ~ All Rights Reserved.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_title_divider_padding">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollIndicators="top|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingEnd="?dialogPreferredPadding"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/storage_edit_document_tree_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text">
                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.advancefilemanager.ui.ReadOnlyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/storage_edit_document_tree_uri">

                <com.advancefilemanager.ui.ReadOnlyTextInputEditText
                    android:id="@+id/uriText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />
            </com.advancefilemanager.ui.ReadOnlyTextInputLayout>

            <com.advancefilemanager.ui.ReadOnlyTextInputLayout
                android:id="@+id/pathLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/storage_edit_document_tree_path">

                <com.advancefilemanager.ui.ReadOnlyTextInputEditText
                    android:id="@+id/pathText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />
            </com.advancefilemanager.ui.ReadOnlyTextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
